Invoice header fixes and column alignments

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5359,3 +5359,13 @@ table.table_listing, table.report-data-table {
     }
   }
 }
+
+.invoice-card {
+  .invoice-total {
+    .base-currency {
+      float: right;
+    }
+  }
+
+  
+}
